<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="500dp"
        android:gravity="right"
        android:text=""
        android:textColor="@color/white"
        android:textSize="50sp"
        android:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <Button
        android:id="@+id/button0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_sign"
        app:layout_constraintStart_toEndOf="@+id/button_sign"
        app:layout_constraintTop_toTopOf="@+id/button_sign"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button0"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_4"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_7"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ac" />

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickNumber"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickOperator"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="#696969"
        app:layout_constraintBottom_toBottomOf="@+id/button_ac"
        app:layout_constraintEnd_toEndOf="@+id/button_multi"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_c"
        app:layout_constraintStart_toStartOf="@+id/button_multi"
        app:layout_constraintTop_toTopOf="@+id/button_ac"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_sum"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape_oval"
        android:gravity="center"
        android:onClick="clickOperator"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="#696969"
        app:layout_constraintEnd_toEndOf="@+id/button_ans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_ans"
        app:layout_constraintTop_toBottomOf="@+id/button_sub" />

    <Button
        android:id="@+id/button_ans"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape_oval"
        android:backgroundTint="@color/black"
        android:text="@string/equal"
        android:textColor="@color/white"
        android:textScaleX="2"
        android:textSize="24sp"
        app:backgroundTint="#696969"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sum"
        app:strokeColor="#050505" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickOperator"
        android:text="@string/multiple"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="#696969"
        app:layout_constraintEnd_toEndOf="@+id/button_sub"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_sub"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_shape_oval"
        android:onClick="clickOperator"
        android:text="@string/sub"
        android:textColor="@color/white"
        android:textScaleX="2"
        android:textSize="30sp"
        app:backgroundTint="#696969"
        app:layout_constraintEnd_toEndOf="@+id/button_sum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_sum"
        app:layout_constraintTop_toBottomOf="@+id/button_multi" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_shape_oval"
        android:text="@string/c"
        android:gravity="right"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="#a9a9a9"
        app:layout_constraintBottom_toBottomOf="@+id/button_ac"
        app:layout_constraintStart_toEndOf="@+id/button_ac"
        app:layout_constraintTop_toTopOf="@+id/button_ac"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_ac"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/button_shape_oval"
        android:text="@string/ac"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:backgroundTint="#a9a9a9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="108dp"
        android:background="@drawable/button_shape_oval"
        android:text="@string/point"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_sign"
        app:layout_constraintStart_toEndOf="@+id/button_sign"
        app:layout_constraintTop_toTopOf="@+id/button_sign"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape_oval"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.176" />

</androidx.constraintlayout.widget.ConstraintLayout>
